--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -86,6 +86,7 @@
     <file>images/clientwindow/seeking2.png</file>
     <file>images/clientwindow/seeking3.png</file>
     <file>images/clientwindow/filenew.png</file>
+    <file>images/clientwindow/torus.png</file>
     <file>images/clientwindow/fileopen.png</file>
     <file>images/clientwindow/image0.png</file>
     <file>images/clientwindow/image1.xpm</file>
