--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -2503,6 +2503,8 @@ After placing and/or undo release button for returning to starting point automat
      <addaction name="separator"/>
      <addaction name="fileExportPic"/>
      <addaction name="fileExportPicClipB"/>
+     <addaction name="separator"/>
+     <addaction name="fileExportSlide"/>
     </widget>
     <addaction name="fileNewBoard"/>
     <addaction name="fileNew"/>
@@ -3880,22 +3882,30 @@ Open the batch analysis dialog which allows you to add SGF files to a queue to b
     <string>Open from &amp;database...</string>
    </property>
   </action>
-  <action name="actionNone">
+  <action name="fileExportSlide">
    <property name="text">
-    <string>None</string>
+    <string>S&amp;lide export...</string>
+   </property>
+   <property name="toolTip">
+    <string>Open the slide export dialog</string>
    </property>
   </action>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>FigureView</class>
-   <extends>QGraphicsView</extends>
-   <header>board.h</header>
-  </customwidget>
-  <customwidget>
    <class>SizeGraphicsView</class>
    <extends>QGraphicsView</extends>
    <header>sizegraphicsview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ClickableListView</class>
+   <extends>QListView</extends>
+   <header>clickableviews.h</header>
+  </customwidget>
+  <customwidget>
+   <class>FigureView</class>
+   <extends>QGraphicsView</extends>
+   <header>board.h</header>
   </customwidget>
   <customwidget>
    <class>Board</class>
@@ -3922,11 +3932,6 @@ Open the batch analysis dialog which allows you to add SGF files to a queue to b
    <class>EvalGraph</class>
    <extends>QGraphicsView</extends>
    <header>evalgraph.h</header>
-  </customwidget>
-  <customwidget>
-   <class>ClickableListView</class>
-   <extends>QListView</extends>
-   <header>clickableviews.h</header>
   </customwidget>
  </customwidgets>
  <resources>
