--- a/src/newvariantgame_gui.ui
+++ b/src/newvariantgame_gui.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>NewVariantGameDialog</class>
  <widget class="QDialog" name="NewVariantGameDialog">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>579</width>
+    <height>384</height>
+   </rect>
+  </property>
   <property name="windowTitle">
    <string>New Variant Game</string>
   </property>
@@ -19,7 +27,7 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1">
      <property name="leftMargin">
       <number>8</number>
      </property>
@@ -35,12 +43,9 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QFrame" name="Frame13">
-         <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Raised</enum>
+        <widget class="QGroupBox" name="GroupBox13">
+         <property name="title">
+          <string>Players</string>
          </property>
          <layout class="QGridLayout">
           <property name="leftMargin">
@@ -94,7 +99,7 @@
           <item row="1" column="1">
            <widget class="QLabel" name="TextLabel2_2">
             <property name="text">
-             <string>Player Name:</string>
+             <string>Name:</string>
             </property>
             <property name="wordWrap">
              <bool>false</bool>
@@ -326,6 +331,19 @@
          </layout>
         </widget>
        </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>0</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
      </item>
      <item>
@@ -354,19 +372,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>0</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item>
     <layout class="QHBoxLayout">
