Add user interface support for SGF figures (named "diagrams" in the UI)
Involves a new pane for figure display, tweaks to the rendering code, and
a new dialog for setting parameters.

--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -35,6 +35,7 @@
     <file>images/boardwindow/editstone.png</file>
     <file>images/boardwindow/rect_select.png</file>
     <file>images/boardwindow/clear_select.png</file>
+    <file>images/boardwindow/figure.png</file>
     <file>images/boardwindow/123.png</file>
   </qresource>
   <qresource prefix="/Help">
