--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -19,12 +19,6 @@
     <file>images/boardwindow/bluearrow-left.png</file>
     <file>images/boardwindow/bluearrow-right.png</file>
     <file>images/boardwindow/bluearrow-up.png</file>
-    <file>images/board/wood2.png</file>
-    <file>images/board/wood1.png</file>
-    <file>images/board/wood3.png</file>
-    <file>images/board/wood4.png</file>
-    <file>images/board/wood5.png</file>
-    <file>images/board/table.png</file>
     <file>images/boardwindow/editsquare.png</file>
     <file>images/boardwindow/edittriangle.png</file>
     <file>images/boardwindow/editcross.png</file>
@@ -37,6 +31,13 @@
     <file>images/boardwindow/clear_select.png</file>
     <file>images/boardwindow/figure.png</file>
     <file>images/boardwindow/123.png</file>
+    <file>images/boardwindow/navclicked.png</file>
+    <file>images/board/wood2.png</file>
+    <file>images/board/wood1.png</file>
+    <file>images/board/wood3.png</file>
+    <file>images/board/wood4.png</file>
+    <file>images/board/wood5.png</file>
+    <file>images/board/table.png</file>
   </qresource>
   <qresource prefix="/Help">
     <file>images/help/gohome.png</file>
