--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>666</width>
-    <height>780</height>
+    <height>776</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -183,7 +183,7 @@
       <string/>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="InterfaceTabWidget">
       <attribute name="title">
@@ -1275,8 +1275,8 @@ Select how to display all brothers of the current move. Either not at all, or as
           <item row="2" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
-             <string>Allow SGF files to
-override child/sibling setting:</string>
+             <string>Allow SGF files to override
+child/sibling setting:</string>
             </property>
             <property name="buddy">
              <cstring>varSGFStyleComboBox</cstring>
@@ -1993,15 +1993,81 @@ If the picture is not set, or unvalid, a default goban is used by qgo</string>
           <string>Default games settings</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_8">
-          <item row="2" column="0" rowspan="2" colspan="2">
+          <item row="1" column="4">
+           <widget class="QLineEdit" name="humanName"/>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="TextLabel6_2">
+            <property name="toolTip">
+             <string>Playing time</string>
+            </property>
+            <property name="text">
+             <string>Handicap :</string>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Computer color:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="TextLabel3_3_3">
+            <property name="toolTip">
+             <string>board size</string>
+            </property>
+            <property name="text">
+             <string>Board size:</string>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QSpinBox" name="computerSizeSpin">
+            <property name="maximumSize">
+             <size>
+              <width>60</width>
+              <height>32767</height>
+             </size>
+            </property>
+            <property name="toolTip">
+             <string>board size</string>
+            </property>
+            <property name="minimum">
+             <number>4</number>
+            </property>
+            <property name="maximum">
+             <number>36</number>
+            </property>
+            <property name="value">
+             <number>19</number>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="4">
            <layout class="QHBoxLayout" name="horizontalLayout_4">
             <property name="topMargin">
              <number>0</number>
             </property>
             <item>
-             <widget class="QLabel" name="label_7">
+             <widget class="QToolButton" name="computerWhiteButton">
               <property name="text">
-               <string>Computer color:</string>
+               <string>...</string>
+              </property>
+              <property name="icon">
+               <iconset resource="q4go.qrc">
+                <normaloff>:/images/stone_b16.png</normaloff>
+                <normalon>:/images/stone_w16.png</normalon>:/images/stone_b16.png</iconset>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -2018,181 +2084,52 @@ If the picture is not set, or unvalid, a default goban is used by qgo</string>
               </property>
              </spacer>
             </item>
-            <item>
-             <widget class="QToolButton" name="computerWhiteButton">
-              <property name="text">
-               <string>...</string>
-              </property>
-              <property name="icon">
-               <iconset resource="q4go.qrc">
-                <normaloff>:/images/stone_b16.png</normaloff>
-                <normalon>:/images/stone_w16.png</normalon>:/images/stone_b16.png</iconset>
-              </property>
-              <property name="checkable">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
            </layout>
           </item>
-          <item row="1" column="0" colspan="2">
-           <layout class="QHBoxLayout">
-            <property name="spacing">
-             <number>6</number>
-            </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="TextLabel6_2">
-              <property name="toolTip">
-               <string>Playing time</string>
-              </property>
-              <property name="text">
-               <string>Handicap :</string>
-              </property>
-              <property name="wordWrap">
-               <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSpinBox" name="computerHandicapSpin">
-              <property name="maximumSize">
-               <size>
-                <width>60</width>
-                <height>32767</height>
-               </size>
-              </property>
-              <property name="toolTip">
-               <string>Playing time</string>
-              </property>
-              <property name="suffix">
-               <string/>
-              </property>
-              <property name="minimum">
-               <number>0</number>
-              </property>
-              <property name="maximum">
-               <number>9</number>
-              </property>
-              <property name="value">
-               <number>0</number>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item row="0" column="0" colspan="2">
-           <layout class="QHBoxLayout">
-            <property name="spacing">
-             <number>6</number>
-            </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="TextLabel3_3_3">
-              <property name="toolTip">
-               <string>board size</string>
-              </property>
-              <property name="text">
-               <string>Board size:</string>
-              </property>
-              <property name="wordWrap">
-               <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSpinBox" name="computerSizeSpin">
-              <property name="maximumSize">
-               <size>
-                <width>60</width>
-                <height>32767</height>
-               </size>
-              </property>
-              <property name="toolTip">
-               <string>board size</string>
-              </property>
-              <property name="minimum">
-               <number>4</number>
-              </property>
-              <property name="maximum">
-               <number>36</number>
-              </property>
-              <property name="value">
-               <number>19</number>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item row="4" column="0" colspan="2">
-           <layout class="QHBoxLayout" name="_23">
-            <property name="spacing">
-             <number>6</number>
-            </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="TextLabel3_3_5">
-              <property name="toolTip">
-               <string>board size</string>
-              </property>
-              <property name="text">
-               <string>Default human player name:</string>
-              </property>
-              <property name="wordWrap">
-               <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="humanName"/>
-            </item>
-           </layout>
-          </item>
-          <item row="4" column="2">
-           <spacer name="horizontalSpacer_3">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="computerHandicapSpin">
+            <property name="maximumSize">
              <size>
-              <width>40</width>
-              <height>20</height>
+              <width>60</width>
+              <height>32767</height>
              </size>
             </property>
-           </spacer>
+            <property name="toolTip">
+             <string>Playing time</string>
+            </property>
+            <property name="suffix">
+             <string/>
+            </property>
+            <property name="minimum">
+             <number>0</number>
+            </property>
+            <property name="maximum">
+             <number>9</number>
+            </property>
+            <property name="value">
+             <number>0</number>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="3">
+           <widget class="QLabel" name="TextLabel3_3_5">
+            <property name="toolTip">
+             <string>board size</string>
+            </property>
+            <property name="text">
+             <string>Default human player name:</string>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2" rowspan="2">
+           <widget class="Line" name="line">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
